2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/13_or_bool_bool_aff_bool.deca
// Description :
//  Test sur l'opération or (||)
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024

{
    boolean b = true || false ;
    
}