2A/05_Projet_GL/src/test/deca/context/invalid/complet/98_method_call_sans_id.deca
// Description :
//  test sur l'appelle d'une methode sans id 
// Resultats :
//    ligne 10 :   la methode get ne prend pas de paramétres
// Historique : 
//  cree le 22/01/2024

class A {
    void get() {

    }

    void debut() {

        get(1);

    }
}

